Add builder for PostgreSQL query runner